--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ repository = "https://github.com/stainless-steel/hdf5-sys"
 homepage = "https://github.com/stainless-steel/hdf5-sys"
 documentation = "https://stainless-steel.github.io/hdf5-sys"
 description = "The package provides bindings to HDF5."
+build = "build.rs"
+links = "hdf5"
