Avoid calling configure and make if not needed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ documentation = "https://stainless-steel.github.io/hdf5-sys"
 description = "The package provides bindings to HDF5."
 build = "build.rs"
 links = "hdf5"
+
+[dependencies]
+libc = "*"
