Exclude testfiles from source/tools

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://stainless-steel.github.io/hdf5-sys"
 description = "The package provides bindings to HDF5."
 build = "build.rs"
 links = "hdf5"
+exclude = ["source/tools/testfiles/*", "source/tools/*/testfiles/*"]
 
 [dependencies]
 libc = "*"
