--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hdf5-sys"
-version = "0.2.6"
+version = "0.2.7"
 authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/stainless-steel/hdf5-sys"
@@ -12,7 +12,7 @@ links = "hdf5"
 exclude = ["source/tools/testfiles/*", "source/tools/*/testfiles/*"]
 
 [dependencies]
-libc = "*"
+libc = "0.2"
 
 [build-dependencies]
-pkg-config = "*"
+pkg-config = "0.3"
