--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "hdf5-sys"
 version = "0.3.3"
+license = "Apache-2.0/MIT"
 authors = [
   "Gustav Larsson <gustav.m.larsson@gmail.com>",
   "Ivan Ukhov <ivan.ukhov@gmail.com>",
 ]
-license = "MIT"
-repository = "https://github.com/stainless-steel/hdf5-sys"
-homepage = "https://github.com/stainless-steel/hdf5-sys"
-documentation = "https://stainless-steel.github.io/hdf5-sys"
 description = "The package provides bindings to HDF5."
+documentation = "https://stainless-steel.github.io/hdf5-sys"
+homepage = "https://github.com/stainless-steel/hdf5-sys"
+repository = "https://github.com/stainless-steel/hdf5-sys"
 build = "build.rs"
 links = "hdf5"
 exclude = ["source/tools/testfiles/*", "source/tools/*/testfiles/*"]
