Switch to docs.rs for documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "hdf5-sys"
-version = "0.4.0"
+version = "0.4.1"
 license = "Apache-2.0/MIT"
 authors = [
   "Gustav Larsson <gustav.m.larsson@gmail.com>",
   "Ivan Ukhov <ivan.ukhov@gmail.com>",
 ]
 description = "The package provides bindings to HDF5."
-documentation = "https://stainless-steel.github.io/hdf5-sys"
+documentation = "https://docs.rs/hdf5-sys"
 homepage = "https://github.com/stainless-steel/hdf5-sys"
 repository = "https://github.com/stainless-steel/hdf5-sys"
 build = "build.rs"
